# Forge

./: .env.template  .gitignore  Cargo.toml  README.md
.github/workflows/: advanced-label-management.yml  codeql.yml
.sqlx/: query-391f47872d633c2a4626ba835ba23431cccfb3824990a18ad095b075adba06a4.json  query-cd2a56184cc9940872fb47e2e2252211a633a7ac74e8a64c9a96fecfe71cc112.json  query-e1e19d3ee0d88170dce2e014718dc969dc6814896db8981885923f68a6da06dc.json
config/: default.toml
docs/: api-reference.md  configuration.md  features.md  installation.md  usage.md
docs/features/: cloud-providers.md
migrations/: 20230101000000_initial_schema.sql
src/: main.rs
src/agents/: advanced_agent.rs  mod.rs
src/ai/: mod.rs
src/api/: mod.rs  server.rs
src/cli/: database.rs  interactive.rs  mod.rs
src/config/: devcontainer.rs  environment.rs  mock.rs  mod.rs  parser.rs
src/container/: mod.rs
src/core/: config.rs  error.rs  mod.rs  resource.rs  types.rs
src/database/: mod.rs
src/detection/: mod.rs
src/docker/: mod.rs
src/environments/: devcontainer.rs  mod.rs  port_forward.rs
src/ml/: mod.rs  performance_predictor.rs  resource_optimizer.rs
src/monitoring/: mod.rs  telemetry.rs
src/network/: port_forwarding.rs
src/orchestration/: docker.rs  kubernetes.rs  port_forwarding.rs
src/orchestration/templates/: Dockerfile.java  Dockerfile.nodejs  Dockerfile.python  Dockerfile.rust
src/plugins/: mod.rs
src/security/: access_control.rs  audit.rs  cloud_providers.rs  cloud_secret_access_control.rs  cloud_sync.rs  config.rs  credential_vault.rs  email.rs  encryption.rs  geolocation.rs  mfa.rs  mod.rs  multi_region_sync.rs  prelude.rs  recovery.rs  secrets.rs  secrets_manager.rs  totp.rs
src/security/cloud_providers_impl/: aws.rs  azure.rs  gcp.rs  mod.rs
src/security/platform/: mod.rs  rate_limited.rs  windows.rs
src/security/providers/: aws.rs  mod.rs
src/security/secrets/: audit.rs  encryption.rs
src/storage/: mod.rs
src/templates/: mod.rs
src/tracing/: distributed_tracer.rs  mod.rs
src/utils/: rate_limit.rs
tests/: integration_tests.rs
